--- a/housing-prediction-app/app/globals.css
+++ b/housing-prediction-app/app/globals.css
@@ -1,11 +1,11 @@
 html.light {
-  background-color: #f5f5f5;
+  background-color: #c7c7c7;
   color: #333;
 }
 
 html.dark {
   background-color: #333;
-  color: #f5f5f5;
+  color: #c7c7c7;
 }
 
 header {
